--- a/src/style/style.css
+++ b/src/style/style.css
@@ -480,8 +480,59 @@ a:active {
 .container {
   position: relative;
   width: 95%;
-  margin: auto;
+  margin: 3rem auto 0;
   max-width: 1200px;
   display: flex;
   flex-direction: column;
   min-height: 100vh; }
+
+.form-cont {
+  width: 60%;
+  margin: 5rem auto; }
+
+label {
+  margin-right: 1rem; }
+
+.quill {
+  margin: 1rem 0; }
+
+.single-cont {
+  width: 600px; }
+
+header {
+  margin: 0rem 0 1rem;
+  padding-bottom: 1rem;
+  border-bottom: 1px solid grey; }
+
+/* Set default font-family */
+/* Show custom fonts in the drop down*/
+.ql-picker.ql-font .ql-picker-item {
+  font-size: 0; }
+  .ql-picker.ql-font .ql-picker-item:before {
+    content: attr(data-value) !important;
+    font-size: 14px; }
+
+/*  get the drop down label to show in the right font */
+.ql-font .ql-picker-options span[data-value="Comfortaa"]::before {
+  font-family: "Comfortaa"; }
+
+.ql-font .ql-picker-options span[data-value="Montserrat"]::before {
+  font-family: "Montserrat"; }
+
+.ql-font .ql-picker-options span[data-value="Slabo"]::before {
+  font-family: "Slabo"; }
+
+/* get picked font to show in the drop down picker */
+.ql-picker.ql-font .ql-active:before {
+  content: attr(data-value) !important;
+  font-size: 14px; }
+
+/* Set content in the editor to show selected font type*/
+.ql-font-Comfortaa {
+  font-family: 'Comfortaa', cursive; }
+
+.ql-font-Montserrat {
+  font-family: 'Montserrat', sans-serif; }
+
+.ql-font-Slabo {
+  font-family: 'Slabo 27px', serif; }
